Fixes the bug: on the Recent Projects page, the icon indicating that the user is busy appears too low in the card if the project name goes on a second line

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -382,6 +382,7 @@ input[type="text"] {
   float: left;
   border-radius: 50%;
   margin-right: 2px;
+  
 }
 .project-user-status-text {
   color: #7695a5;
@@ -399,8 +400,11 @@ input[type="text"] {
 
 .project-user-isBusy {
   position: relative;
-  left: -2px;
+  // left: -2px;
   width: fit-content;
+  display: inline-block;
+  margin-left: 12px;
+  top: 3px;
 }
 
 .project-user-isBusyTest {
